refactor(youtube/integrations): rewrite codes